# hongrp2040_boot

./: CMakeCache.txt  CMakeLists.txt
src/: CMakeLists.txt
src/ap/: ap.cpp  ap.h  ap_def.h
src/ap/modules/: modules.h
src/ap/modules/boot/: boot.c  boot.h
src/ap/modules/cmd/: cmd_task.c  cmd_task.h
src/ap/modules/cmd/driver/: cmd_uart.c
src/ap/modules/cmd/process/: cmd_boot.c  cmd_boot.h
src/bsp/: bsp.c
src/bsp/board/: rp2040_baram.h
src/common/: def.h  err_code.h
src/common/hw/include/: cmd.h  reset.h
src/hw/: hw.c  hw.h  hw_def.h
src/hw/driver/: cmd.c  reset.c  uart.c
tools/: down.py
